--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,80 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# ===============================
+# Node & Dependencies
+# ===============================
 node_modules/
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+package-lock.json
 
+# ===============================
 # Expo
+# ===============================
 .expo/
+.expo-shared/
 dist/
 web-build/
 expo-env.d.ts
 
-# Native
-.kotlin/
-*.orig.*
+# ===============================
+# Native Folders (регенираются)
+# ===============================
+/android
+/ios
+/build
+/**/*.apk
+/**/*.aab
+
+# ===============================
+# Environment variables
+# ===============================
+.env
+.env*.local
+*.env
+
+# ===============================
+# OS Files
+# ===============================
+.DS_Store
+Thumbs.db
+
+# ===============================
+# TypeScript
+# ===============================
+*.tsbuildinfo
+
+# ===============================
+# Metro
+# ===============================
+.metro-health-check*
+
+# ===============================
+# Credentials / Keys / Sensitive
+# ===============================
 *.jks
+*.keystore
 *.p8
 *.p12
 *.key
+*.pem
 *.mobileprovision
 
-# Metro
-.metro-health-check*
+# Google Services
+google-services.json
+GoogleService-Info.plist
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+# ===============================
+# Logs
+# ===============================
+*.log
 
-# macOS
-.DS_Store
-*.pem
+# ===============================
+# Android / Kotlin cache
+# ===============================
+.kotlin/
 
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
+# ===============================
+# Misc
+# ===============================
+*.orig.*
 app-example
-
-# generated native folders
-/ios
-/android
